--- a/events.html
+++ b/events.html
@@ -73,6 +73,9 @@ Phone :
 Current Address :  
 <textarea cols="80" rows="5" placeholder="Current Address" value="address" required>  
 </textarea>  
+    Office Address :  
+<textarea cols="80" rows="5" placeholder="Office Address" value="address" required>  
+</textarea>  
  <label for="email"><b>Email</b></label>  
  <input type="text" placeholder="Enter Email" name="email" required>  
   
